# node-tantivy-binding

./: .gitattributes  .gitmodules  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  vitest.config.ts
.github/workflows/: CI.yml
__test__/: fixtures.ts  index.spec.ts  sync-examples.ts  test-escapes.spec.ts  test-json-bug.spec.ts  tutorials.spec.ts
benchmark/: document.bench.ts  facets.bench.ts  indexing.bench.ts  schema-query.bench.ts  search.bench.ts  snippets.bench.ts
docs/: tutorials.md
examples/: adding-document.ts  basic-indexing.ts  basic-search.ts  complex-query.ts  custom-analyzer.ts  custom-tokenizer.ts  persistent-index.ts  query-explanation.ts  snippet-generation.ts
src/: document.rs  explanation.rs  facet.rs  index.rs  lib.rs  parser_error.rs  query.rs  schema.rs  schemabuilder.rs  searcher.rs  snippet.rs  tokenizer.rs
