[package]
description = "Node.js bindings for Tantivy search engine"
edition     = "2021"
license     = "MIT"
name        = "node_tantivy"
version     = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
napi = { version = "3.2", default-features = false, features = [
  "napi8",
  "serde-json",
] }
napi-derive = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tantivy = "0.25.0"

[build-dependencies]
napi-build = "2.2"

# Optimize for size
[profile.release]
codegen-units   = 1         # Single codegen unit for better optimization
debug           = false     # No debug info
lto             = "fat"     # Full link-time optimization
opt-level       = "z"       # Optimize aggressively for size
overflow-checks = false     # Disable integer overflow checks
panic           = "abort"   # Abort on panic (smaller binary)
strip           = "symbols" # Strip debug symbols
